kubernetes/ing_hap.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ing
  namespace: product-catalog
  annotations:
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5000
      - path: /api/ratings
        pathType: Prefix
        backend:
          service:
            name: ratings-service
            port:
              number: 5001
